# dev-env-experiments

./: .gitignore  configuration.nix  pyproject.toml  run.py  workalong.md
actual/3_settings_diff/: settings_diff_categorized.json  settings_diff_cleaned.json
actual/4_snapshot_brew_apps/: apps.txt  snapshot.txt
archive/: readme.md  todo.md
archive/journey/: readme.md
archive/mac-settings-research/: defaults_before.plist  dump_defaults.sh  settings.diff
archive/todos/: part_2.md  part_3_post_setup_scripts.md
archive/unused_template_files/: misc.txt
dev/: flake.nix  test_pushd.sh  todo.md  workalong.md
dev/journey/: step_1_side_quests.md
dev/mac_settings/: diff_settings.py  dump_settings.py  tool.py
dev/nix/: build-nix.sh
dev/scripts/: readme.md
dev/todos/: part_1.md
dev/workalong/: group_1.md
dev_env/: __init__.py  tests_checklist.md
dev_env/core/: constants.py  ffs.py  git_utils.py  launchd_utils.py  repo_discovery.py  settings.py
dev_env/setup/: main.py  setup_shell_profiles_and_env.py
dev_env/tests/: test_ffs.py  test_launchd_utils.py
history/dev_env_2023/: .alias
mac_settings/: readme.md  tool.py
mac_settings/src/: categorize_changes.py
modules/darwin/: default.nix
nix/: build-nix.sh  configuration.nix
old_dev_env/: __init__.py
old_dev_env/core/: dev_env.py  main.py  presets.py  settings.py
resources/: sample.launchd.plist
resources/project_templates/default/: README.md  pyproject.toml
tests/: test_clone_projects.py  test_daily_job.py  test_imports.py  test_monthly_job.py  test_new_github_project.py  test_setup_monthly_projects_dir.py  test_setup_new_project_dir.py  test_setup_root_dir.py  test_start_new_project.py
tools/: todo.md
(+125 files in other folders)
